--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     class="home_blob-img"
                     x="12"
                     y="8"
-                    href="./assets/img/art.png"
+                    href="./assets/img/bg.png"
                   />
                 </g>
               </svg>
